feat: readme, beautified app

--- a/entries/web/index.html
+++ b/entries/web/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     {{> body }}
-    <script type="module" src="/entries/iframe/main.tsx"></script>
+    <script type="module" src="/entries/web/main.tsx"></script>
   </body>
 </html>
